# autobackup

./: CMakeLists.txt  Makefile  autobackup.c
src/: arguments.c  arguments.h  datacopy.c  datacopy.h  helper.c  helper.h  push.c  push.h  require.c  require.h  time_measure.c  time_measure.h  verbose.c  verbose.h
